fix(#39): 리뷰 피드백 반영
- SearchProductsQuery: String.isBlank() 메소드 사용하여 코드 간결화
- ProductSpecification: 키워드 trim() 처리 추가하여 재사용성 향상

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>